--- a/app/src/main/res/layout/card_feeds.xml
+++ b/app/src/main/res/layout/card_feeds.xml
@@ -92,7 +92,8 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp" >
+            android:layout_marginTop="15dp"
+            android:visibility="gone">
             <VideoView
                 android:id="@+id/imageComplaintVideo"
                 android:layout_width="match_parent"
@@ -177,11 +178,9 @@
                     android:id="@+id/card_iv_like"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_thumb_up_green_24dp"
-                    android:padding="3dp"
+                    android:src="@drawable/ic_upvote_grey_24dp"
                     android:layout_marginLeft="5dp"
-                    android:background="@drawable/background_like"
-                    android:elevation="5dp"/>
+                    android:layout_marginBottom="-3dp"/>
                 <!--            <view-->
                 <!--                android:layout_width="2dp"-->
                 <!--                android:layout_height="match_parent"-->
@@ -203,7 +202,7 @@
                     android:text="Share"/>
 
                 <ImageView
-                    android:id="@+id/da_iv_comment"
+                    android:id="@+id/da_iv_share"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_menu_share"
