--- a/app/src/main/res/layout/header_navigation_drawer.xml
+++ b/app/src/main/res/layout/header_navigation_drawer.xml
@@ -3,27 +3,29 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp"
-    android:background="@color/colorPrimaryDark">
+    android:padding="10dp">
     <ImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginBottom="15dp"
         android:layout_marginTop="15dp"
-        android:background="@drawable/googleg_disabled_color_18"/>
+        android:src="@drawable/logonew"/>
     <TextView
         android:id="@+id/nav_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Username"
-        android:textSize="25dp"
-        android:textColor="#ffffff"/>
+        android:textSize="25dp"/>
     <TextView
-        android:id="@+id/nav_mobilr"
+        android:id="@+id/nav_mobile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="952146943"
-        android:textColor="#ffffff"/>
+        android:text="952146943"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#aaaaaa"
+        android:layout_marginTop="20dp"/>
 
 
 </LinearLayout>
